--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-<title>coor_map</title>
+<title>Trouver la longitude et lattitude d'un endroit avec Open Street Map</title>
 
 <style type="text/css">
 	    div.olControlAttribution {
